ndb - bug#27004 - mgmapi does not compile to pure c