storage/ndb/include/mgmapi/ndb_logevent.h
@@ -393,6 +393,7 @@ extern "C" {
       } NDBStartCompleted;
       /** Log event specific data for for corresponding NDB_LE_ log event */
       struct {
+        unsigned _todo;
       } STTORRYRecieved;
       /** Log event specific data for for corresponding NDB_LE_ log event */
       struct {
@@ -437,6 +438,7 @@ extern "C" {
       } NDBStopForced;
       /** Log event specific data for for corresponding NDB_LE_ log event */
       struct {
+        unsigned _todo;
       } NDBStopAborted;
       /** Log event specific data for for corresponding NDB_LE_ log event */
       struct {
@@ -470,9 +472,11 @@ extern "C" {
       /* NODERESTART */
       /** Log event specific data for for corresponding NDB_LE_ log event */
       struct {
+        unsigned _todo;
       } NR_CopyDict;
       /** Log event specific data for for corresponding NDB_LE_ log event */
       struct {
+        unsigned _todo;
       } NR_CopyDistr;
       /** Log event specific data for for corresponding NDB_LE_ log event */
       struct {
@@ -518,12 +522,15 @@ extern "C" {
       } ArbitResult;
       /** Log event specific data for for corresponding NDB_LE_ log event */
       struct {
+        unsigned _todo;
       } GCP_TakeoverStarted;
       /** Log event specific data for for corresponding NDB_LE_ log event */
       struct {
+        unsigned _todo;
       } GCP_TakeoverCompleted;
       /** Log event specific data for for corresponding NDB_LE_ log event */
       struct {
+        unsigned _todo;
       } LCP_TakeoverStarted;
       /** Log event specific data for for corresponding NDB_LE_ log event */
       struct {
@@ -604,6 +611,7 @@ extern "C" {
       /** Log event specific data for for corresponding NDB_LE_ log event */
       struct {
 	/* TODO */
+        unsigned _todo;
       } WarningEvent;
 
       /* INFO */
@@ -618,6 +626,7 @@ extern "C" {
       /** Log event specific data for for corresponding NDB_LE_ log event */
       struct {
 	/* TODO */
+        unsigned _todo;
       } InfoEvent;
       /** Log event specific data for for corresponding NDB_LE_ log event */
       struct {
